--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,19 +14,18 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: ^0.12.9
   firebase_auth: ^0.14.0+2
   google_sign_in: ^4.0.6
   flutter_bloc: ^0.20.1
   equatable: ^0.4.0
   meta: ^1.1.6
   font_awesome_flutter: ^8.5.0
-
+  image_picker: ^0.6.1+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
